@@ -1681,19 +1681,11 @@ argument_list|()
 expr_stmt|;
 name|this
 operator|.
-name|set
+name|setNumBytes
 argument_list|(
-name|getBlockId
-argument_list|()
-argument_list|,
 name|block
 operator|.
 name|getNumBytes
-argument_list|()
-argument_list|,
-name|block
-operator|.
-name|getGenerationStamp
 argument_list|()
 argument_list|)
 expr_stmt|;
