@@ -142,39 +142,9 @@ name|hadoop
 operator|.
 name|hdfs
 operator|.
-name|StripedFileTestUtil
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hdfs
-operator|.
 name|protocol
 operator|.
 name|Block
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hdfs
-operator|.
-name|protocol
-operator|.
-name|ErasureCodingPolicy
 import|;
 end_import
 
@@ -274,15 +244,11 @@ name|IOException
 import|;
 end_import
 
-begin_comment
-comment|/**  * Make sure we correctly update the quota usage with the striped blocks.  */
-end_comment
-
 begin_class
-DECL|class|TestQuotaWithStripedBlocks
+DECL|class|TestCommitBlockWithInvalidGenStamp
 specifier|public
 class|class
-name|TestQuotaWithStripedBlocks
+name|TestCommitBlockWithInvalidGenStamp
 block|{
 DECL|field|BLOCK_SIZE
 specifier|private
@@ -292,79 +258,6 @@ name|int
 name|BLOCK_SIZE
 init|=
 literal|1024
-operator|*
-literal|1024
-decl_stmt|;
-DECL|field|DISK_QUOTA
-specifier|private
-specifier|static
-specifier|final
-name|long
-name|DISK_QUOTA
-init|=
-name|BLOCK_SIZE
-operator|*
-literal|10
-decl_stmt|;
-DECL|field|ecPolicy
-specifier|private
-specifier|static
-specifier|final
-name|ErasureCodingPolicy
-name|ecPolicy
-init|=
-name|ErasureCodingPolicyManager
-operator|.
-name|getSystemDefaultPolicy
-argument_list|()
-decl_stmt|;
-DECL|field|NUM_DATA_BLOCKS
-specifier|private
-specifier|static
-specifier|final
-name|int
-name|NUM_DATA_BLOCKS
-init|=
-name|ecPolicy
-operator|.
-name|getNumDataUnits
-argument_list|()
-decl_stmt|;
-DECL|field|NUM_PARITY_BLOCKS
-specifier|private
-specifier|static
-specifier|final
-name|int
-name|NUM_PARITY_BLOCKS
-init|=
-name|ecPolicy
-operator|.
-name|getNumParityUnits
-argument_list|()
-decl_stmt|;
-DECL|field|GROUP_SIZE
-specifier|private
-specifier|static
-specifier|final
-name|int
-name|GROUP_SIZE
-init|=
-name|NUM_DATA_BLOCKS
-operator|+
-name|NUM_PARITY_BLOCKS
-decl_stmt|;
-DECL|field|ecDir
-specifier|private
-specifier|static
-specifier|final
-name|Path
-name|ecDir
-init|=
-operator|new
-name|Path
-argument_list|(
-literal|"/ec"
-argument_list|)
 decl_stmt|;
 DECL|field|cluster
 specifier|private
@@ -420,11 +313,6 @@ argument_list|(
 name|conf
 argument_list|)
 operator|.
-name|numDataNodes
-argument_list|(
-name|GROUP_SIZE
-argument_list|)
-operator|.
 name|build
 argument_list|()
 expr_stmt|;
@@ -449,67 +337,6 @@ name|cluster
 operator|.
 name|getFileSystem
 argument_list|()
-expr_stmt|;
-name|dfs
-operator|.
-name|mkdirs
-argument_list|(
-name|ecDir
-argument_list|)
-expr_stmt|;
-name|dfs
-operator|.
-name|getClient
-argument_list|()
-operator|.
-name|setErasureCodingPolicy
-argument_list|(
-name|ecDir
-operator|.
-name|toString
-argument_list|()
-argument_list|,
-name|ecPolicy
-argument_list|)
-expr_stmt|;
-name|dfs
-operator|.
-name|setQuota
-argument_list|(
-name|ecDir
-argument_list|,
-name|Long
-operator|.
-name|MAX_VALUE
-operator|-
-literal|1
-argument_list|,
-name|DISK_QUOTA
-argument_list|)
-expr_stmt|;
-name|dfs
-operator|.
-name|setQuotaByStorageType
-argument_list|(
-name|ecDir
-argument_list|,
-name|StorageType
-operator|.
-name|DISK
-argument_list|,
-name|DISK_QUOTA
-argument_list|)
-expr_stmt|;
-name|dfs
-operator|.
-name|setStoragePolicy
-argument_list|(
-name|ecDir
-argument_list|,
-name|HdfsConstants
-operator|.
-name|HOT_STORAGE_POLICY_NAME
-argument_list|)
 expr_stmt|;
 block|}
 annotation|@
@@ -536,10 +363,10 @@ block|}
 block|}
 annotation|@
 name|Test
-DECL|method|testUpdatingQuotaCount ()
+DECL|method|testCommitWithInvalidGenStamp ()
 specifier|public
 name|void
-name|testUpdatingQuotaCount
+name|testCommitWithInvalidGenStamp
 parameter_list|()
 throws|throws
 name|Exception
@@ -551,9 +378,7 @@ init|=
 operator|new
 name|Path
 argument_list|(
-name|ecDir
-argument_list|,
-literal|"file"
+literal|"/file"
 argument_list|)
 decl_stmt|;
 name|FSDataOutputStream
@@ -598,7 +423,6 @@ name|previous
 init|=
 literal|null
 decl_stmt|;
-comment|// Create striped blocks which have a cell in each block.
 name|Block
 name|newBlock
 init|=
@@ -606,7 +430,7 @@ name|DFSTestUtil
 operator|.
 name|addBlockToFile
 argument_list|(
-literal|true
+literal|false
 argument_list|,
 name|cluster
 operator|.
@@ -637,9 +461,18 @@ argument_list|()
 argument_list|,
 name|previous
 argument_list|,
-literal|1
-argument_list|,
 literal|0
+argument_list|,
+literal|100
+argument_list|)
+decl_stmt|;
+name|Block
+name|newBlockClone
+init|=
+operator|new
+name|Block
+argument_list|(
+name|newBlock
 argument_list|)
 decl_stmt|;
 name|previous
@@ -655,86 +488,18 @@ operator|.
 name|getBlockPoolId
 argument_list|()
 argument_list|,
-name|newBlock
+name|newBlockClone
 argument_list|)
 expr_stmt|;
-specifier|final
-name|INodeDirectory
-name|dirNode
-init|=
-name|dir
+name|previous
 operator|.
-name|getINode4Write
+name|setGenerationStamp
 argument_list|(
-name|ecDir
-operator|.
-name|toString
-argument_list|()
-argument_list|)
-operator|.
-name|asDirectory
-argument_list|()
-decl_stmt|;
-specifier|final
-name|long
-name|spaceUsed
-init|=
-name|dirNode
-operator|.
-name|getDirectoryWithQuotaFeature
-argument_list|()
-operator|.
-name|getSpaceConsumed
-argument_list|()
-operator|.
-name|getStorageSpace
-argument_list|()
-decl_stmt|;
-specifier|final
-name|long
-name|diskUsed
-init|=
-name|dirNode
-operator|.
-name|getDirectoryWithQuotaFeature
-argument_list|()
-operator|.
-name|getSpaceConsumed
-argument_list|()
-operator|.
-name|getTypeSpaces
-argument_list|()
-operator|.
-name|get
-argument_list|(
-name|StorageType
-operator|.
-name|DISK
-argument_list|)
-decl_stmt|;
-comment|// When we add a new block we update the quota using the full block size.
-name|Assert
-operator|.
-name|assertEquals
-argument_list|(
-name|BLOCK_SIZE
-operator|*
-name|GROUP_SIZE
-argument_list|,
-name|spaceUsed
+literal|123
 argument_list|)
 expr_stmt|;
-name|Assert
-operator|.
-name|assertEquals
-argument_list|(
-name|BLOCK_SIZE
-operator|*
-name|GROUP_SIZE
-argument_list|,
-name|diskUsed
-argument_list|)
-expr_stmt|;
+try|try
+block|{
 name|dfs
 operator|.
 name|getClient
@@ -766,68 +531,99 @@ name|getId
 argument_list|()
 argument_list|)
 expr_stmt|;
-specifier|final
-name|long
-name|actualSpaceUsed
-init|=
-name|dirNode
-operator|.
-name|getDirectoryWithQuotaFeature
-argument_list|()
-operator|.
-name|getSpaceConsumed
-argument_list|()
-operator|.
-name|getStorageSpace
-argument_list|()
-decl_stmt|;
-specifier|final
-name|long
-name|actualDiskUsed
-init|=
-name|dirNode
-operator|.
-name|getDirectoryWithQuotaFeature
-argument_list|()
-operator|.
-name|getSpaceConsumed
-argument_list|()
-operator|.
-name|getTypeSpaces
-argument_list|()
-operator|.
-name|get
-argument_list|(
-name|StorageType
-operator|.
-name|DISK
-argument_list|)
-decl_stmt|;
-comment|// In this case the file's real size is cell size * block group size.
 name|Assert
 operator|.
-name|assertEquals
+name|fail
 argument_list|(
-name|StripedFileTestUtil
-operator|.
-name|BLOCK_STRIPED_CELL_SIZE
-operator|*
-name|GROUP_SIZE
-argument_list|,
-name|actualSpaceUsed
+literal|"should throw exception because invalid genStamp"
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
 name|Assert
 operator|.
-name|assertEquals
+name|assertTrue
 argument_list|(
-name|StripedFileTestUtil
+name|e
 operator|.
-name|BLOCK_STRIPED_CELL_SIZE
-operator|*
-name|GROUP_SIZE
+name|toString
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"Commit block with mismatching GS. NN has "
+operator|+
+name|newBlock
+operator|+
+literal|", client submits "
+operator|+
+name|newBlockClone
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|previous
+operator|=
+operator|new
+name|ExtendedBlock
+argument_list|(
+name|cluster
+operator|.
+name|getNamesystem
+argument_list|()
+operator|.
+name|getBlockPoolId
+argument_list|()
 argument_list|,
-name|actualDiskUsed
+name|newBlock
+argument_list|)
+expr_stmt|;
+name|boolean
+name|complete
+init|=
+name|dfs
+operator|.
+name|getClient
+argument_list|()
+operator|.
+name|getNamenode
+argument_list|()
+operator|.
+name|complete
+argument_list|(
+name|file
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|dfs
+operator|.
+name|getClient
+argument_list|()
+operator|.
+name|getClientName
+argument_list|()
+argument_list|,
+name|previous
+argument_list|,
+name|fileNode
+operator|.
+name|getId
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"should complete successfully"
+argument_list|,
+name|complete
 argument_list|)
 expr_stmt|;
 block|}
